--- a/app/views/merchant/bulk_discounts/index.html.erb
+++ b/app/views/merchant/bulk_discounts/index.html.erb
@@ -1,4 +1,5 @@
 <H1><%=@merchant.name%>'s Bulk Discount Index Page</H1>
+<p><%=link_to "Create New Discount", "/merchants/#{@merchant.id}/bulk_discounts/new" %></p>
 
 <%@bulk_discounts.each do |bulk_discount|%>
 
