adds completed user story 2

--- a/app/views/merchant/bulk_discounts/index.html.erb
+++ b/app/views/merchant/bulk_discounts/index.html.erb
@@ -6,5 +6,6 @@
   <h3>Name of discount: <%=link_to bulk_discount.name, "/merchants/#{@merchant.id}/bulk_discounts/#{bulk_discount.id}"%></h3>
   <h4>Percentage off: <%=(bulk_discount.percentage_discount*100)%>% off</h4>
   <h4>Quantity Threshold: <%=bulk_discount.quantity_threshold%> items</h4>
+  <h4><%= button_to "Delete #{bulk_discount.name} Discount", "/merchants/#{@merchant.id}/bulk_discounts/#{bulk_discount.id}", method: :delete%></h4>
   <br>
 <%end%>
