--- a/app/views/merchant/bulk_discounts/_bulk_discount_form.html.erb
+++ b/app/views/merchant/bulk_discounts/_bulk_discount_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_with url: url, method: method, local: true do |f| %>
 	<%= f.label :name %>
-	<%= f.text_field :name %>
+	<%= f.text_field name %>
 
   <%= f.label :percentage_discount %>
-	<%= f.text_field :percentage_discount %>
+	<%= f.text_field percentage_discount %>
 
   <%= f.label :quantity_threshold %>
-	<%= f.text_field :quantity_threshold %>
+	<%= f.text_field quantity_threshold %>
 
 	<%= f.submit button_text %>
 <% end %>
