--- a/app/views/merchant/bulk_discounts/show.html.erb
+++ b/app/views/merchant/bulk_discounts/show.html.erb
@@ -2,3 +2,5 @@
 <br>
 <h3>Percentage off: <%=(@bulk_discount.percentage_discount*100)%>%</h3>
 <h3>Quantity Threshold: <%=@bulk_discount.quantity_threshold %></h3>
+<br>
+<h4><%=link_to "Edit Discount", "/merchants/#{@merchant.id}/bulk_discounts/#{@bulk_discount.id}/edit"%></h4>
