--- a/app/views/merchant/bulk_discounts/edit.html.erb
+++ b/app/views/merchant/bulk_discounts/edit.html.erb
@@ -1,9 +1,14 @@
 <h3>Edit Bulk Discount</h3>
-<%= render partial: "_bulk_discount_form", locals:{
-url: "/merchants/#{@merchant.id}/bulk_discounts/#{@bulk_discount.id}",
-method: :patch,
-name: :name, value: @bulk_discount.name, 
-percentage_discount: :percentage_discount, value: @bulk_discount.percentage_discount,
-quantity_threshold: :quantity_threshold, value: @bulk_discount.quantity_threshold,
-button_text: "Update Discount"
-}%>
+
+<%= form_with url: "/merchants/#{@merchant.id}/bulk_discounts/#{@bulk_discount.id}", method: :patch, local: true do |f| %>
+	<%= f.label :name %>
+	<%= f.text_field :name, value: @bulk_discount.name %>
+
+  <%= f.label :percentage_discount %>
+	<%= f.text_field :percentage_discount, value: @bulk_discount.percentage_discount  %>
+
+  <%= f.label :quantity_threshold %>
+	<%= f.text_field :quantity_threshold, value: @bulk_discount.quantity_threshold  %>
+
+	<%= f.submit "Update Discount" %>
+<% end %>
