--- a/app/views/merchant/bulk_discounts/index.html.erb
+++ b/app/views/merchant/bulk_discounts/index.html.erb
@@ -9,3 +9,10 @@
   <h4><%= button_to "Delete #{bulk_discount.name} Discount", "/merchants/#{@merchant.id}/bulk_discounts/#{bulk_discount.id}", method: :delete%></h4>
   <br>
 <%end%>
+
+<h3>Upcoming Holidays</h3>
+<%@holidays.each do |holiday|%>
+<h4><%=holiday.name%></h4>
+<h4><%=holiday.date%></h4>
+<br>
+<%end%>
