user story 6 with model tests

--- a/app/views/merchant/invoices/show.html.erb
+++ b/app/views/merchant/invoices/show.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div id="total_discounted_revenue">
-  <p>Total Discounted Revenue: <%=number_to_currency(@invoice.total_discounted_revenue.to_f/100, percision: 2) %></p>
+  <p>Total Discounted Revenue: <%=number_to_currency(@total_discounted_revenue.to_f/100, percision: 2) %></p>
   </div>
 
 <div id="customers">
